--- a/public/css/swatches-2020.scss
+++ b/public/css/swatches-2020.scss
@@ -201,11 +201,12 @@ label.color-swatch,
   &.color-swatch--711 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-711.jpg');}	//gray digicamo
   &.color-swatch--713 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-rope-713.jpg');}
   &.color-swatch--715 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-715.jpg');} //rasta
+  &.color-swatch--719 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-719.png');}
   &.color-swatch--720 {background-color: #266252;}
   &.color-swatch--724 {background-color: #713e3d;}
-
   &.color-swatch--748 {background-color: #6d7f97;}		//blue
   &.color-swatch--749 {background-color: #e1e1e1;}		//silver
+
   &.color-swatch--771 {background-color: #c44b8f;}		//very-berry
   &.color-swatch--776 {background-color: #ff6068;}
   &.color-swatch--781 {background-color: #4e9b5b;}		//fern
@@ -248,14 +249,13 @@ label.color-swatch,
   &.color-swatch--872 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-colorado.jpg');}
   &.color-swatch--874 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-874.jpg');}
   &.color-swatch--875 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-875.jpg');}
-  &.color-swatch--876 {background-color: #bb9340; border: 3px solid #123a5b;}
+  &.color-swatch--876 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-876.png');}
   &.color-swatch--877 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-877.png');}
   &.color-swatch--ss877 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-877.png');}
+  &.color-swatch--mariner-879 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-mariner-879.jpg');}
   &.color-swatch--880 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-880.png');}
   &.color-swatch--881 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-881.png');}
   &.color-swatch--ss881 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-881.png');}
-
-  &.color-swatch--mariner-879 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-mariner-879.jpg');}
   &.color-swatch--mariner-883 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-mariner-883.jpg');}
   &.color-swatch--884 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-884.jpg');}	//
   &.color-swatch--885 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-885.jpg');}	//
@@ -271,7 +271,7 @@ label.color-swatch,
   &.color-swatch--895 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-895.jpg');}	//
   &.color-swatch--896 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-896.jpg');}	//
   &.color-swatch--898 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-898.jpg');}	//
-  &.color-swatch--899 {background-color: #B95100; border: 3px solid #b1ae9d;}
+  &.color-swatch--899 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-899.png');}
   &.color-swatch--sleeper-899 {background-color: #B95100; border-right: 10px solid #b1ae9d;}
 
 
@@ -303,7 +303,7 @@ label.color-swatch,
   &.color-swatch--1008 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1008.png');}
   &.color-swatch--1010 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1010.png');}
   &.color-swatch--1011 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1011.jpg');}
-  &.color-swatch--1012 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1012.jpg');}
+  &.color-swatch--1012 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1012.png');}
   &.color-swatch--1013 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1013.jpg');}
   &.color-swatch--1014 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1014.jpg');}
   &.color-swatch--neoprene-1014 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1014.jpg');}
@@ -312,17 +312,17 @@ label.color-swatch,
   &.color-swatch--1020 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1020.jpg');}
   &.color-swatch--fpp-1020 {background-color: #dde0d9; border: 3px solid #62c3de;}
   &.color-swatch--1021 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1021.jpg');}
-  &.color-swatch--1022 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1022.jpg');}
+  &.color-swatch--1022 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1022.png');}
   &.color-swatch--1025 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1025.jpg');}
-  &.color-swatch--1026 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1026.jpg');}
-  &.color-swatch--1027 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1027.jpg');}
-  &.color-swatch--1028 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1028.jpg');}
-  &.color-swatch--1029 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1029.jpg');}
+  &.color-swatch--1026 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1026.png');}
+  &.color-swatch--1027 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1027.png');}
+  &.color-swatch--1028 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1028.png');}
+  &.color-swatch--1029 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1029.png');}
   &.color-swatch--1030 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1030.jpg');}
   &.color-swatch--1031 {background-image: url('//b2b.chums.com/images/swatches/2021/swatch-1031.jpg');}
-  &.color-swatch--1033 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1033.jpg');}
-  &.color-swatch--1034 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1034.jpg');}
-  &.color-swatch--1041 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1041.jpg');}
+  &.color-swatch--1033 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1033.png');}
+  &.color-swatch--1034 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1034.png');}
+  &.color-swatch--1041 {background-image: url('//b2b.chums.com/images/swatches/2022/swatch-1041.png');}
   // seersucker
   &.color-swatch--100-seersucker {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-100.jpg');}
   &.color-swatch--101-seersucker {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-101.jpg');}
