--- a/public/css/variants.css
+++ b/public/css/variants.css
@@ -1,3 +1,18 @@
+/* Error: The target selector was not found.
+ * Use "@extend .btn-outline-secondary !optional" to avoid this error.
+ *    ,
+ * 48 |     @extend .btn-outline-secondary;
+ *    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+ *    '
+ *   variants.scss 48:5  root stylesheet */
 
-
-/*# sourceMappingURL=variants.css.map */
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: The target selector was not found.\aUse "@extend .btn-outline-secondary !optional" to avoid this error.\a    \2577 \a 48 \2502      @extend .btn-outline-secondary;\d\a    \2502      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a    \2575 \a   variants.scss 48:5  root stylesheet';
+}
