--- a/public/css/chums.scss
+++ b/public/css/chums.scss
@@ -75,6 +75,13 @@ h2, h3, h4 {
   }
 }
 
+a {
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 .site-container {
   max-width: $max-content-width;
   margin: auto;
