--- a/public/css/global-search-container.css
+++ b/public/css/global-search-container.css
@@ -1,10 +1,9 @@
-/* Error: Undefined variable.
- *    ,
- * 74 | @mixin media-breakpoint-down($name, $breakpoints: $grid-breakpoints) {
- *    |                                                   ^^^^^^^^^^^^^^^^^
- *    '
- *   ..\..\node_modules\bootstrap\scss\mixins\_breakpoints.scss 74:51  media-breakpoint-down()
- *   global-search-container.scss 21:3                                 root stylesheet */
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 2 | @import "../../node_modules/bootstrap/scss/mixins/breakpoints";
+ *   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+ *   '
+ *   global-search-container.scss 2:9  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -14,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 74 \2502  @mixin media-breakpoint-down($name, $breakpoints: $grid-breakpoints) {\a    \2502                                                    ^^^^^^^^^^^^^^^^^\a    \2575 \a   ..\\..\\node_modules\\bootstrap\\scss\\mixins\\_breakpoints.scss 74:51  media-breakpoint-down()\a   global-search-container.scss 21:3                                 root stylesheet";
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 2 \2502  @import \"../../node_modules/bootstrap/scss/mixins/breakpoints\";\d\a   \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   global-search-container.scss 2:9  root stylesheet";
 }
