--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,10 +1,9 @@
-/* Error: Undefined variable.
- *    ,
- * 61 | @mixin media-breakpoint-up($name, $breakpoints: $grid-breakpoints) {
- *    |                                                 ^^^^^^^^^^^^^^^^^
- *    '
- *   ..\..\node_modules\bootstrap\scss\mixins\_breakpoints.scss 61:49  media-breakpoint-up()
- *   navbar.scss 32:7                                                  root stylesheet */
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 2 | @import "../../node_modules/bootstrap/scss/mixins/breakpoints";
+ *   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+ *   '
+ *   navbar.scss 2:9  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -14,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 61 \2502  @mixin media-breakpoint-up($name, $breakpoints: $grid-breakpoints) {\a    \2502                                                  ^^^^^^^^^^^^^^^^^\a    \2575 \a   ..\\..\\node_modules\\bootstrap\\scss\\mixins\\_breakpoints.scss 61:49  media-breakpoint-up()\a   navbar.scss 32:7                                                  root stylesheet";
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 2 \2502  @import \"../../node_modules/bootstrap/scss/mixins/breakpoints\";\d\a   \2502          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   navbar.scss 2:9  root stylesheet";
 }
