--- a/public/css/swatches-2020.scss
+++ b/public/css/swatches-2020.scss
@@ -207,6 +207,7 @@ label.color-swatch,
   &.color-swatch--748 {background-color: #6d7f97;}		//blue
   &.color-swatch--749 {background-color: #e1e1e1;}		//silver
 
+  &.color-swatch--770 {background-color: #13c9eb;}		//costa blue
   &.color-swatch--771 {background-color: #c44b8f;}		//very-berry
   &.color-swatch--776 {background-color: #ff6068;}
   &.color-swatch--781 {background-color: #4e9b5b;}		//fern
