--- a/public/css/variables.scss
+++ b/public/css/variables.scss
@@ -164,6 +164,7 @@ $logo-width: 107px;
 $logo-height: 100px;
 $logo-padding: $logo-width / 2;
 
+$carousel-control-color: black;
 
 .loading-spinner {
   background-size: 50%;
