--- a/public/css/ProductPage.scss
+++ b/public/css/ProductPage.scss
@@ -8,7 +8,8 @@ $product-minicart-panel-width: 200px;
 .season-teaser {
   display: block;
   text-align: left;
-  margin-bottom: 0.5rem;
+  //margin-bottom: 0.5rem;
+  min-height: 1.5rem;
   color: $text-color;
   &--icon {
     color: $chums-red;
@@ -162,22 +163,34 @@ $product-minicart-panel-width: 200px;
     }
   }
 
+  var
   .carousel-control-next {
     &:hover {
-      background: linear-gradient(to left, rgba(0, 0, 0, 0.25), transparent);
+      .carousel-control-next-icon {
+        background-color: rgba(255,255,255,0.75);
+      }
+      //background: linear-gradient(to left, rgba(0, 0, 0, 0.25), transparent);
     }
   }
   .carousel-control-prev {
     &:hover {
-      background: linear-gradient(to right, rgba(0, 0, 0, 0.25), transparent);
+      .carousel-control-prev-icon {
+        background-color: rgba(255,255,255,0.85);
+      }
+      //background: linear-gradient(to right, rgba(0, 0, 0, 0.25), transparent);
     }
   }
 
   .carousel-indicators li {
-    background-color: rgba(0, 0, 0, 0.25);
+    //background-color: rgba(0, 0, 0, 0.25);
     cursor: pointer;
+    border: 1px solid transparent;
+    transition: border-color 350ms;
     &:hover {
-      background-color: rgba(0, 0, 0, 0.5);
+      border: 1px solid rgba(0,0,0,0.25);
+    }
+    &.active {
+      border: 1px solid rgba(0,0,0,0.25);
     }
   }
   .cart-qty-input {
