--- a/public/css/swatches-2020.css
+++ b/public/css/swatches-2020.css
@@ -933,6 +933,11 @@ label.color-swatch.color-swatch--749,
 .color-swatch.color-swatch--749 {
   background-color: #e1e1e1;
 }
+label.color-swatch.color-swatch--770,
+.tag--swatch.color-swatch--770,
+.color-swatch.color-swatch--770 {
+  background-color: #13c9eb;
+}
 label.color-swatch.color-swatch--771,
 .tag--swatch.color-swatch--771,
 .color-swatch.color-swatch--771 {
