feat(Swatches): Add swatch 463 40th Anniversary Stripe

--- a/public/css/swatches-2020.css
+++ b/public/css/swatches-2020.css
@@ -711,6 +711,11 @@ label.color-swatch.color-swatch--462,
 .color-swatch.color-swatch--462 {
   background-image: url("//b2b.chums.com/images/swatches/2020/swatch-462.jpg");
 }
+label.color-swatch.color-swatch--463,
+.tag--swatch.color-swatch--463,
+.color-swatch.color-swatch--463 {
+  background-image: url("//b2b.chums.com/images/swatches/2023/swatch-463.png");
+}
 label.color-swatch.color-swatch--500,
 .tag--swatch.color-swatch--500,
 .color-swatch.color-swatch--500 {
