--- a/public/css/swatches-2020.scss
+++ b/public/css/swatches-2020.scss
@@ -157,6 +157,7 @@ label.color-swatch,
   &.color-swatch--460 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-460.jpg');} //blue pineapple
   &.color-swatch--461 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-461.jpg');}
   &.color-swatch--462 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-462.jpg');} //yellow pineapple
+  &.color-swatch--463 {background-image: url('//b2b.chums.com/images/swatches/2023/swatch-463.png');} //40th Anniversary Stripe
 
   &.color-swatch--500 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-500.png');}	//red-grey stripe
   &.color-swatch--501 {background-image: url('//b2b.chums.com/images/swatches/2020/swatch-501.png');}	//grey-white-stripe
