feat(GoogleSignIn): migrate to index.html

--- a/views/index.pug
+++ b/views/index.pug
@@ -26,6 +26,7 @@ html(lang="en-us", prefix="og: https://ogp.me/ns#")
         link(rel="stylesheet" href="/css/swatches-2020.css?v=" + swatchTimestamp)
 
         script(async src="https://www.googletagmanager.com/gtag/js?id=UA-3648826-6")
+        script(async defer src="https://accounts.google.com/gsi/client")
         script.
             window.dataLayer = window.dataLayer || [];
             function gtag() {
